--- a/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
+++ b/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
@@ -96,7 +96,7 @@
           <a href="#" class="text-white"><i class="ion ion-android-person-add"></i> 1,299 followers</a>
         </div><!--profile card ends-->
         <ul class="nav-news-feed">
-          <li><i class="icon ion-ios-paper"></i><div><a href="newsfeed.html">My Newsfeed</a></div></li>
+          <li><i class="icon ion-ios-paper"></i><div><a routerLink="/user/newsfeed">My Newsfeed</a></div></li>
           <li><i class="icon ion-ios-people"></i><div><a href="newsfeed-people-nearby.html">People Nearby</a></div></li>
           <li><i class="icon ion-ios-people-outline"></i><div><a href="newsfeed-friends.html">Friends</a></div></li>
           <li><i class="icon ion-chatboxes"></i><div><a href="newsfeed-messages.html">Messages</a></div></li>
