--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -1,4 +1,3 @@
-
 <!-- Header
 ================================================= -->
 <header id="header">
@@ -14,7 +13,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index-register.html"><img src="images/logo.png" alt="logo"/></a>
+        <a class="navbar-brand" href="index-register.html"><img src="./assets/images/logo.png" alt="logo"/></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,12 +31,12 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                aria-expanded="false">Newsfeed <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a routerLink="/user/newsfeed">Newsfeed</a></li>
+              <li><a routerLink="/user/requests">Friend Requests</a></li>
+              <li><a routerLink="/user/people-nearby">Friend Suggestions</a></li>
+              <li><a routerLink="/user/friends">My friends</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
             </ul>
           </li>
           <li class="dropdown">
@@ -61,12 +60,12 @@
             <ul class="dropdown-menu page-list">
               <li><a href="index.html">Landing Page 1</a></li>
               <li><a href="index-register.html">Landing Page 2</a></li>
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a routerLink="/user/newsfeed">Newsfeed</a></li>
+              <li><a routerLink="/user/requests">Friend Requests</a></li>
+              <li><a routerLink="/user/people-nearby">Friend Suggestions</a></li>
+              <li><a routerLink="/user/friends">My friends</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
               <li><a href="timeline.html">Timeline</a></li>
               <li><a href="timeline-about.html">Timeline About</a></li>
               <li><a href="timeline-album.html">Timeline Album</a></li>
@@ -96,14 +95,15 @@
       <!-- Newsfeed Common Side Bar Left
       ================================================= -->
       <div class="col-md-3 static">
+<!--        Hiển thị thông tin cá nhân user-->
         <div class="profile-card">
           <img src="http://placehold.it/300x300" alt="user" class="profile-photo"/>
-          <h5><a href="timeline.html" class="text-white">Sarah Cruiz</a></h5>
+          <h5><a href="timeline.html" class="text-white">{{userDetail.username}}</a></h5>
           <a href="#" class="text-white"><i class="ion ion-android-person-add"></i> 1,299 followers</a>
         </div><!--profile card ends-->
         <ul class="nav-news-feed">
           <li><i class="icon ion-ios-paper"></i>
-            <div><a href="newsfeed.html">My Newsfeed</a></div>
+            <div><a routerLink="/user/newfeed">My Newsfeed</a></div>
           </li>
           <li><i class="icon ion-ios-people"></i>
             <div><a routerLink="/user/people-nearby">People Nearby</a></div>
@@ -117,7 +117,7 @@
           <li><i class="icon ion-images"></i>
             <div><a href="newsfeed-images.html">Images</a></div>
           </li>
-<!--          <li><i class="icon ion-ios-videocam"></i>-->
+          <!--          <li><i class="icon ion-ios-videocam"></i>-->
           <li><i class="icon ion-ios-people"></i>
             <div><a routerLink="/user/requests">Friend Request</a></div>
           </li>
