--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -62,8 +62,8 @@
               <li><a href="index-register.html">Landing Page 2</a></li>
               <li><a routerLink="/user/newsfeed">Newsfeed</a></li>
               <li><a routerLink="/user/requests">Friend Requests</a></li>
-              <li><a routerLink="/user/people-nearby">Friend Suggestions</a></li>
               <li><a routerLink="/user/friends">My friends</a></li>
+              <li><a routerLink="/user/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
               <li><a href="timeline.html">Timeline</a></li>
@@ -95,7 +95,7 @@
       <!-- Newsfeed Common Side Bar Left
       ================================================= -->
       <div class="col-md-3 static">
-<!--        Hiển thị thông tin cá nhân user-->
+        <!--        Hiển thị thông tin cá nhân user-->
         <div class="profile-card">
           <img src="http://placehold.it/300x300" alt="user" class="profile-photo"/>
           <h5><a href="timeline.html" class="text-white">{{userDetail?.username}}</a></h5>
@@ -106,10 +106,13 @@
             <div><a routerLink="/user/newfeed">My Newsfeed</a></div>
           </li>
           <li><i class="icon ion-ios-people"></i>
-            <div><a routerLink="/user/people-nearby">People Nearby</a></div>
+            <div><a routerLink="/user/requests">Friend Request</a></div>
           </li>
           <li><i class="icon ion-ios-people-outline"></i>
-            <div><a href="newsfeed-friends.html">Friends</a></div>
+            <div><a routerLink="/user/friends">Friends</a></div>
+          </li>
+          <li><i class="icon ion-ios-people"></i>
+            <div><a routerLink="/user/people-nearby">People Nearby</a></div>
           </li>
           <li><i class="icon ion-chatboxes"></i>
             <div><a href="newsfeed-messages.html">Messages</a></div>
@@ -118,10 +121,8 @@
             <div><a href="newsfeed-images.html">Images</a></div>
           </li>
           <!--          <li><i class="icon ion-ios-videocam"></i>-->
-          <li><i class="icon ion-ios-people"></i>
-            <div><a routerLink="/user/requests">Friend Request</a></div>
-          </li>
-        </ul><!--news-feed links ends-->
+        </ul>
+        <!--news-feed links ends-->
         <div id="chat-block">
           <div class="title">Chat online</div>
           <ul class="online-users list-inline">
